examples-generated/namespaced/network/v1alpha1/route.yaml
apiVersion: network.hcloud.m.crossplane.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: network/v1alpha1/route
  labels:
    testing.upbound.io/example-name: privNet
  name: privnet
  namespace: crossplane-system
spec:
  forProvider:
    destination: 10.100.1.0/24
    gateway: 10.0.1.1
    networkId: ${hcloud_network.mynet.id}
